--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ body {
     font-size: 1rem;
     line-height: 1.6;
     background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+main {
+    flex: 1;
 }
 
 .container {
@@ -262,12 +270,15 @@ footer {
 }
 
 ul {
-    padding-left: 1.5rem; /* Add padding to the left for indentation */
+    padding-left: 1.5rem;
+    /* Add padding to the left for indentation */
 }
 
 ul li {
-    margin-bottom: 1rem; /* Add space between list items */
-    line-height: 1.6; /* Improve readability */
+    margin-bottom: 1rem;
+    /* Add space between list items */
+    line-height: 1.6;
+    /* Improve readability */
 }
 
 .container p {
